--- a/exercie_formulaire/exerciecalculatrice.html
+++ b/exercie_formulaire/exerciecalculatrice.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <input type="text" id="nombre1" />
+    <div>
+      <button id="plus">+</button>
+      <button id="moins">-</button>
+      <button id="mult">*</button>
+      <button id="div">/</button>
+    </div>
+    <input type="text" id="nombre2" />
+    <button id="egal">=</button>
+    <input type="text" id="result" disabled />
     <script src="exercicecalculatrice.js"></script>
-    
-</body>
+  </body>
 </html>
+  
