--- a/exercie_formulaire/formulaire.html
+++ b/exercie_formulaire/formulaire.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="formulaire.css">
     <title>Document</title>
 </head>
 <body>
