--- a/exercie_formulaire/exercice.formulaire.html
+++ b/exercie_formulaire/exercice.formulaire.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
     <script src="exercice.formulaire.js" defer></script>
 
     <style>
@@ -18,13 +19,12 @@
         background-image: url("../index/img/realisateur-the-flash-laisse-presager-film-batman-dans-nouveau-dcu.jpg");
         background-size: cover;
         background-repeat: no-repeat;
-        
       }
-      h1{
+      h1 {
         text-align: center;
         color: rgba(255, 72, 0, 0.603);
       }
-      p{
+      p {
         text-align: center;
         color: palevioletred;
       }
@@ -32,7 +32,7 @@
   </head>
   <body class="bg_body">
     <div>
-      <h1>trouvez le nombre mystere</h1>
+      <h1 class="cls1">trouvez le nombre mystere</h1>
       <p>vous avez 7 essais maximun pour trouver le nombre</p>
       <button id="batman">nouveau jeux</button>
       <button id="harley_quin">solution</button>
